[package]
name = "wxwork_tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21.3"
retour = "0.3.1"
windows = { version = "0.61.3", features = ["Win32_System_Console", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_SystemServices"] }
windows-collections = "0.2.0"
windows-core = "0.61.2"
windows-numerics = "0.2.0"
windows-registry = "0.5.3"
windows-result = "0.3.4"
windows-services = "0.24.0"
windows-strings = "0.4.2"
windows-sys = "0.60.2"
windows-threading = "0.1.0"
windows-version = "0.1.4"
